// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - Input should render with only required props 1`] = `
<div
  className="inputContainer"
>
  <div
    className="labels"
  />
  <input
    className="input"
    id="#test-input"
    onChange={[Function]}
    placeholder=""
    required={true}
    type="input"
    value="value"
  />
</div>
`;

exports[`Component - Input should render with placeholder, label and secondary label 1`] = `
<div
  className="inputContainer"
>
  <div
    className="labels"
  >
    <div
      className="label"
    >
      label 1
    </div>
    <div
      className="secondaryLabel"
      id="#secondary-label"
    >
      label 2
    </div>
  </div>
  <input
    className="input"
    id="#test-input"
    onChange={[Function]}
    placeholder="my input test"
    required={true}
    type="input"
    value="value"
  />
</div>
`;

exports[`Component - Input should render with secondary label, click secondary function and type 1`] = `
<div
  className="inputContainer"
>
  <div
    className="labels"
  >
    <div
      className="secondaryLabelClickable"
      id="#secondary-label"
      onClick={[MockFunction]}
    >
      label 2
    </div>
  </div>
  <input
    className="input"
    id="#test-input"
    onChange={[Function]}
    placeholder=""
    required={true}
    type="password"
    value="value"
  />
</div>
`;

exports[`Component - Input should trigger input change 1`] = `
<div
  className="inputContainer"
>
  <div
    className="labels"
  >
    <div
      className="label"
    >
      label 1
    </div>
    <div
      className="secondaryLabel"
      id="#secondary-label"
    >
      label 2
    </div>
  </div>
  <input
    className="input"
    id="#test-input"
    onChange={[Function]}
    placeholder="my input test"
    required={true}
    type="input"
    value=""
  />
</div>
`;
